[package]
name = "ssp-client"
version = "0.1.0"
edition = "2021"
publish = true
description = "Client library for SSP, a Slippi session protocol"
readme = "README.md"
repository = "https://github.com/Thomas-995/ssp"
license = "MIT"

[dependencies]
arrow2 = { version = "0.17", features = ["io_ipc", "io_ipc_compression", "io_json"] }
peppi = "2.0"
byteorder = "1.5"
ssbm-data = "0.1"
quinn = "0.11"
rustls = {version = "0.23", features = ["aws-lc-rs"] }
rcgen = "0.14.5"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
iroh = {version="0.95.0", features = ["discovery-pkarr-dht", "discovery-local-network"]}
iroh-gossip = "0.95.0"
base64 = "0.22"
blake3 = "1.5"
hex = "0.4"
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ubjson = "0.2"
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
enet = "0.3"
sha3 = "0.10.8"
hkdf = "0.12.4"
distributed-topic-tracker = "=0.2.5"
ed25519-dalek = "3.0.0-pre.1"
log = "0.4"
env_logger = "0.11"
debug_print = "1.0.0"

[[bin]]
name = "ssp"
path = "src/main.rs"

[lib]
name = "ssp_client"
path = "src/lib.rs"

[dev-dependencies]
enet-sys = "1.0.5"
iroh-relay = { version = "0.95.0", features = ["server"] }
ssp-bootstrap = { path = "../ssp_bootstrap" }
